Changed file name

--- a/fisrt.html
+++ b/fisrt.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1> Trevik Peterson</h1>
-        <h2>   I like to party</h2>
+        <h2>   I like to program</h2>
     </body>
 </html>
