--- a/Barbell-Calculator/index.html
+++ b/Barbell-Calculator/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta property="title" content="Chuck Game">
         <title>Barbel cal</title>
         <link rel="stylesheet" href="style.css" type="text/css">
 
