--- a/Barbell-Calculator/index.html
+++ b/Barbell-Calculator/index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <html lang="en">
     <head>
+        <title>Barbell cal</title>
         <meta charset="utf-8" />
-        <meta property="title" content="Chuck Game">
-        <title>Barbel cal</title>
+        <meta property="description" content="Chuck Game">
         <link rel="stylesheet" href="style.css" type="text/css">
 
     </head>
